IVYPORTAL-7208 Enhance process List - Navigation - Fix UI for mobile process list: enhance jump to selected fieldset, hide expand/collapse all

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -2095,6 +2095,7 @@ a.case-details-document-add-link {
 .mobile-process-start-list-container {
   padding-right: 0;
   width: 100%;
+  padding-top: 15px;
 }
 
 /* Small screen */
